--- a/app/src/main/res/layout/activity_clerkdashboard.xml
+++ b/app/src/main/res/layout/activity_clerkdashboard.xml
@@ -147,7 +147,7 @@
 
         <!-- Second Grid Cell -->
         <androidx.cardview.widget.CardView
-            android:id="@+id/viewAppointment"
+            android:id="@+id/addIllness"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_row="0"
@@ -175,7 +175,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="View Appointment"
+                    android:text="Add Illness"
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textAlignment="center"/>
