--- a/app/src/main/res/layout/activity_viewillness.xml
+++ b/app/src/main/res/layout/activity_viewillness.xml
@@ -11,27 +11,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="List of Hospital"
+        android:text="Type of illness"
         android:textAllCaps="true"
         android:textColor="#FF018786"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/currentAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:padding="16dp"
-        android:text="Current Address:"
-        android:textColor="#FF018786"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listOfHospitalTitle" />
-
 
     <LinearLayout
         android:id="@+id/searchBar"
@@ -41,7 +27,7 @@
         android:background="@drawable/search_view_background"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currentAddress">
+        app:layout_constraintTop_toBottomOf="@+id/listOfHospitalTitle">
 
         <EditText
             android:id="@+id/searchBarText"
@@ -64,7 +50,6 @@
 
     </LinearLayout>
 
-
     <LinearLayout
         android:id="@+id/cardContainer"
         android:layout_width="0dp"
@@ -77,8 +62,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar"
-        android:layout_marginTop="16dp"></LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/searchBar"></LinearLayout>
+
     <include layout="@layout/activity_footer" />
 
 
