--- a/app/src/main/res/layout/activity_clerkdashboard.xml
+++ b/app/src/main/res/layout/activity_clerkdashboard.xml
@@ -221,7 +221,7 @@
 
         <!-- Third Grid Cell -->
         <androidx.cardview.widget.CardView
-            android:id="@+id/previewDesign"
+            android:id="@+id/addAnnouncement"
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_row="1"
@@ -249,7 +249,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Preview Redesign"
+                    android:text="Add Announcement"
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textAlignment="center"/>
