Add on hospital in doctor Information

--- a/app/src/main/res/layout/activity_doctorviewappointment.xml
+++ b/app/src/main/res/layout/activity_doctorviewappointment.xml
@@ -57,6 +57,15 @@
                 android:text="Event"
                 android:textColor="#FFF"
                 android:textStyle="bold" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="PDF"
+                android:textColor="#FFF"
+                android:textStyle="bold" />
         </TableRow>
 
 
