--- a/app/src/main/res/layout/item_time_event.xml
+++ b/app/src/main/res/layout/item_time_event.xml
@@ -26,4 +26,16 @@
         android:textColor="@color/black"
         />
 
+
+    <TextView
+        android:id="@+id/createPDF"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="PDF"
+        android:textColor="@color/black"
+        />
+
 </LinearLayout>
