Fix some home page icon and add PDF is done now

--- a/app/src/main/res/layout/item_time_event.xml
+++ b/app/src/main/res/layout/item_time_event.xml
@@ -35,7 +35,7 @@
         android:gravity="center"
         android:padding="8dp"
         android:text="PDF"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         />
 
 </LinearLayout>
