--- a/app/src/main/res/layout/appointment_card_view.xml
+++ b/app/src/main/res/layout/appointment_card_view.xml
@@ -60,6 +60,17 @@
             android:text="Cancel Appointment "
             android:textColor="#FF0000"
             android:textSize="14sp" />
+        <TextView
+            android:id="@+id/viewPDFAppointment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/timeTextView"
+            android:layout_toRightOf="@id/imageView"
+            android:layout_marginStart="16dp"
+            android:visibility="gone"
+            android:text="View PDF"
+            android:textColor="@color/teal_200"
+            android:textSize="14sp" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
