--- a/app/src/main/res/layout/activity_addannoucement.xml
+++ b/app/src/main/res/layout/activity_addannoucement.xml
@@ -4,25 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FDFDFD"
     tools:context=".userDetailsActivity">
-
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/announcementTitleLayout"
         style="@style/LoginTextInputOuterFieldStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView2"
-        >
+        app:layout_constraintTop_toBottomOf="@id/imageView2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/announcementTitleET"
@@ -36,33 +31,30 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/announcementLayout"
         style="@style/LoginTextInputOuterFieldStyle"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/announcementTitleLayout"
-        >
+        app:layout_constraintTop_toBottomOf="@id/announcementTitleLayout">
 
         <EditText
             android:id="@+id/announcementET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="start|top"
             android:hint="Announcement"
             android:inputType="textMultiLine"
             android:lines="4"
-            android:gravity="start|top"
-            android:scrollbars="vertical"
-            />
+            android:scrollbars="vertical" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/green_rounded_button"
@@ -79,11 +71,16 @@
         android:id="@+id/imageView2"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="104dp"
+        style="@style/nightForIcon"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_announcement_24" />
 
+    <include
+        android:id="@+id/include"
+        layout="@layout/activity_footer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
