--- a/app/src/main/res/layout/activity_createdoctorinformation.xml
+++ b/app/src/main/res/layout/activity_createdoctorinformation.xml
@@ -10,7 +10,7 @@
         android:id="@+id/doctorInformation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:text="Doctor Information"
         android:textAllCaps="true"
@@ -43,19 +43,18 @@
             android:clickable="true"
             android:contentDescription="Profile Image"
             android:scaleType="centerCrop"
-            android:src="@drawable/baseline_person_24" />
+            android:src="@drawable/baseline_person_24"
+            style="@style/nightForIcon"/>
 
     </FrameLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/hospitalLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,12 +72,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/departmentLayout"
         style="@style/LoginTextInputOuterFieldStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,12 +93,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/qualificationLayout"
         style="@style/LoginTextInputOuterFieldStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,11 +115,9 @@
 
     <Button
         android:id="@+id/selectImagebtn"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
         android:text="Select Image"
         app:layout_constraintBottom_toTopOf="@+id/uploadimagebtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,24 +126,20 @@
 
     <Button
         android:id="@+id/uploadimagebtn"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="168dp"
         android:text="Save Information"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageInfo"/>
+        app:layout_constraintTop_toBottomOf="@+id/selectImagebtn" />
 
     <TextView
         android:id="@+id/imageInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="Please upload image same width and height "
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/selectImagebtn"
         app:layout_constraintTop_toBottomOf="@+id/qualificationLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
