--- a/app/src/main/res/layout/activity_doctoravailableappointment.xml
+++ b/app/src/main/res/layout/activity_doctoravailableappointment.xml
@@ -10,24 +10,21 @@
         android:id="@+id/appointmentDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Appointment Date"
         android:textAllCaps="true"
         android:textColor="#FF018786"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/shiftStartLayout"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/shiftStartLayout"
         style="@style/LoginTextInputOuterFieldStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,12 +43,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/shiftEndLayout"
         style="@style/LoginTextInputOuterFieldStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="20dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,38 +67,30 @@
         android:id="@+id/totalhours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
         android:text="Total Hours:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.066"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/shiftEndLayout"
-        app:layout_constraintVertical_bias="0.072" />
-
-
+        app:layout_constraintStart_toStartOf="@+id/shiftEndLayout"
+        app:layout_constraintTop_toBottomOf="@+id/shiftEndLayout" />
 
 
     <TextView
         android:id="@+id/labelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
         android:text="Available Appointment Day:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.066"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/totalhours"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintStart_toStartOf="@+id/totalhours"
+        app:layout_constraintTop_toBottomOf="@id/totalhours" />
 
     <LinearLayout
         android:id="@+id/linearOne"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginStart="16dp"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="@+id/labelTextView"
         app:layout_constraintTop_toBottomOf="@id/labelTextView">
 
         <CheckBox
@@ -130,11 +117,11 @@
 
     <LinearLayout
         android:id="@+id/linearTwo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginStart="16dp"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
         android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="@+id/linearOne"
         app:layout_constraintTop_toBottomOf="@id/linearOne">
 
         <CheckBox
@@ -157,6 +144,7 @@
             android:layout_height="wrap_content"
             android:checked="false"
             android:text="Saturday" />
+
         <CheckBox
             android:id="@+id/checkSunday"
             android:layout_width="wrap_content"
@@ -167,14 +155,13 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/green_rounded_button"
         android:text="Submit"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
