--- a/app/src/main/res/layout/activity_doctorviewappointment.xml
+++ b/app/src/main/res/layout/activity_doctorviewappointment.xml
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="#FFF"
-            android:background="#F1FBFB">
+            style="@style/backgroundColorForTableRow">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
