--- a/app/src/main/res/layout/activity_loader.xml
+++ b/app/src/main/res/layout/activity_loader.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- res/layout/custom_progress_bar.xml -->
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!-- res/layout/custom_progress_bar.xml -->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
@@ -9,15 +7,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00FFFFFF">
+        android:background="#22000000">
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_centerInParent="true"
-            android:layout_marginBottom="16dp"
-            android:background="@android:color/transparent"
             android:indeterminate="true"
             android:indeterminateTint="#FF018786" />
 
@@ -27,11 +23,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/progressBar"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/transparent"
-            android:backgroundTint="@android:color/transparent"
+            android:layout_marginTop="16dp"
             android:text="Loading..."
-            android:textColor="@android:color/black"
+            android:textColor="#FF018786"
             android:textSize="18sp" />
+
     </RelativeLayout>
 </FrameLayout>
