--- a/app/src/main/res/layout/activity_addhospital.xml
+++ b/app/src/main/res/layout/activity_addhospital.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FDFDFD"
     tools:context=".userDetailsActivity">
 
 
@@ -104,10 +103,12 @@
 
     <ImageView
         android:id="@+id/imageView2"
+        style="@style/nightForIcon"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="116dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_local_hospital_24" />
