--- a/app/src/main/res/layout/activity_allhospital.xml
+++ b/app/src/main/res/layout/activity_allhospital.xml
@@ -33,8 +33,8 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/baseline_search_24"
-            app:tint="@android:color/white" />
+            app:srcCompat="@drawable/baseline_search_24"
+            style="@style/nightForIcon" />
 
     </LinearLayout>
 
@@ -53,11 +53,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
         android:clickable="true"
         android:contentDescription="Add new hospital"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/baseline_add_24" />
+        app:srcCompat="@drawable/baseline_add_24"
+        />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" /> <!-- Adjust the percentage as needed -->
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/activity_footer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
