Add footer on clerk and fix for the pdf reader bug

--- a/app/src/main/res/layout/activity_addillness.xml
+++ b/app/src/main/res/layout/activity_addillness.xml
@@ -125,5 +125,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_sick_24" />
 
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/activity_footer" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
