--- a/app/src/main/res/layout/activity_addhospital.xml
+++ b/app/src/main/res/layout/activity_addhospital.xml
@@ -112,6 +112,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_local_hospital_24" />
-
+    <include
+        android:id="@+id/include"
+        layout="@layout/activity_footer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
