--- a/app/src/main/res/layout/activity_doctoravailableappointment.xml
+++ b/app/src/main/res/layout/activity_doctoravailableappointment.xml
@@ -166,5 +166,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearTwo" />
-
+    <include
+        android:id="@+id/include"
+        layout="@layout/activity_footer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
