Add on filter department

--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -64,14 +64,14 @@
 
     <TextView
         android:id="@+id/resetPasswordDescription2"
-        android:layout_width="269dp"
+        android:layout_width="300dp"
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
         android:text="Enter your email and IC and we will send you a verification code to reset your password"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#FF018786"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resetPasswordDescription" />
@@ -122,13 +122,13 @@
 
     <TextView
         android:id="@+id/description"
-        android:layout_width="wrap_content"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="If you didn't register for the IC. Please contact customer service. 01112896803"
         android:textAllCaps="false"
         android:textColor="#FF018786"
-        android:textSize="8sp"
+        android:textSize="10dp"
         app:layout_constraintStart_toStartOf="@+id/ICLayout"
         app:layout_constraintTop_toBottomOf="@+id/ICLayout" />
 
