--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -6,21 +6,14 @@
     android:layout_height="match_parent">
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".BookingActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Doctor's Name"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+
 
     <TextView
         android:id="@+id/doctorNameTextView"
@@ -28,6 +21,7 @@
         android:layout_height="wrap_content"
         android:text="Dr. John Doe"
         android:textSize="18sp"
+        android:textStyle="bold"
         android:layout_marginHorizontal="16dp"/>
 
 
