--- a/app/src/main/res/layout/activity_clerkdashboard.xml
+++ b/app/src/main/res/layout/activity_clerkdashboard.xml
@@ -222,8 +222,8 @@
             android:id="@+id/logoutButton"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:layout_row="1"
-            android:layout_column="2"
+            android:layout_row="2"
+            android:layout_column="0"
             android:layout_gravity="fill"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
@@ -325,7 +325,41 @@
                     android:textAlignment="center"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
-
+        <!-- Third Grid Cell -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/addDepartment"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:layout_gravity="fill"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="8dp"
+            app:cardBackgroundColor="@color/teal_700"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
+            android:layout_columnSpan="1">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="center_vertical|center_horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_apartment_24"
+                    app:tint="@color/white" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add Department"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
 
         <!-- Repeat for the rest of the grid cells -->
