--- a/app/src/main/res/layout/activity_createdoctorinformation.xml
+++ b/app/src/main/res/layout/activity_createdoctorinformation.xml
@@ -71,7 +71,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/departmentLayout"
-        style="@style/LoginTextInputOuterFieldStyle"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="320dp"
         android:layout_height="60dp"
         android:layout_marginHorizontal="16dp"
@@ -81,13 +81,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hospitalLayout">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/departmentET"
-            style="@style/LoginTextInputInnerFieldStyle"
+        <AutoCompleteTextView
+            android:id="@+id/departmentAutoCompleteTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Doctor Department"
-            android:inputType="text" />
+            android:padding="14dp"
+            android:hint="Department"
+            />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
