--- a/app/src/main/res/layout/activity_doctordisableappointmentdate.xml
+++ b/app/src/main/res/layout/activity_doctordisableappointmentdate.xml
@@ -11,12 +11,6 @@
         android:padding="16dp"
         tools:context=".BookingActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Doctor's Name"
-            android:textSize="24sp"
-            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/doctorNameTextView"
@@ -24,6 +18,7 @@
             android:layout_height="wrap_content"
             android:text="Dr. John Doe"
             android:textSize="18sp"
+            android:textStyle="bold"
             android:layout_marginHorizontal="16dp"/>
 
 
