--- a/app/src/main/res/layout/doctorlist_card_view.xml
+++ b/app/src/main/res/layout/doctorlist_card_view.xml
@@ -18,7 +18,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/baseline_person_24"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            />
 
         <TextView
             android:id="@+id/department"
